--- a/gb/25/4/12/n14480858.md
+++ b/gb/25/4/12/n14480858.md
@@ -3,62 +3,61 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：河南现15级大风 建筑被毁车辆被砸</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480867-e87c45bcly1i0dv98yup1j21400u0gxw-600x400.jpg" />
-<h6>4月12日，河南省出现极端大风天气，最大风力达15级，有建筑物一面玻璃被刮碎。（网络图片）
-</h6>
+<h6>4月12日，河南省出现极端大风天气，最大风力达15级，有建筑物一面玻璃被刮碎。（网络图片）</h6>
 <hr>
 	<p>【大纪元2025年04月12日讯】4月12日，河南省出现极端大风天气，最大风力达15级。不少网友发帖称窗户被吹走，车辆被砸，农民西瓜棚被摧毁等，损失惨重。</p>
 <p>河南省气象局12日发布消息称，监测显示，4月11日6时至12日6时，河南省大部出现8到10级阵风，部分县市11到13级，最大风力达15级，40个国家站最大风速达到或突破4月历史同期极值。同时，全省大部伴有浮尘或扬沙，多个地区出现阵雨、雷阵雨。</p>
 <p>不少网友在网上发视频表示，“感觉电线杆都要被吹倒，走在路上分分钟要被风‘卷走’。”“骑着车呢，电线杆子突然砸下来了。”“一个大风直接把窗户给拔掉了。”</p>
 <p>网上流传的照片、视频显示，有的建筑物一面玻璃被刮碎，铁皮屋顶被掀翻，胳膊粗的围栏被吹倒，两轮电动车倒地，被大风吹下的阳台护栏等杂物砸在车子上，还有许多大树被吹倒等。</p>
 <p>受大风影响，还有农民数万亩西瓜棚全被摧毁，损失惨重。</p>
-<figure id="attachment_14480875" aria-describedby="caption-attachment-14480875" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480875-e87c45bcly1i0dv964p4gj21400u0aio.jpg"><img decoding="async" class="size-large wp-image-14480875" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480875-e87c45bcly1i0dv964p4gj21400u0aio-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14480875" class="wp-caption-text">（网络图片）</figcaption></figure>
-<figure id="attachment_14480874" aria-describedby="caption-attachment-14480874" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480874-e87c45bcly1i0dv98yup1j21400u0gxw.jpg"><img decoding="async" class="size-large wp-image-14480874" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480874-e87c45bcly1i0dv98yup1j21400u0gxw-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14480874" class="wp-caption-text">（网络图片）</figcaption></figure>
-<figure id="attachment_14480873" aria-describedby="caption-attachment-14480873" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480873-e87c45bcly1i0dv98l8gmj20u01404by.jpg"><img decoding="async" class="size-large wp-image-14480873" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480873-e87c45bcly1i0dv98l8gmj20u01404by-600x800.jpg" alt="" width="600" b="800" /></a><figcaption id="caption-attachment-14480873" class="wp-caption-text">（网络图片）</figcaption></figure>
-<figure id="attachment_14480872" aria-describedby="caption-attachment-14480872" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480872-e87c45bcly1i0dv97ebu2j20u01407ha.jpg"><img decoding="async" class="size-large wp-image-14480872" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480872-e87c45bcly1i0dv97ebu2j20u01407ha-600x800.jpg" alt="" width="600" b="800" /></a><figcaption id="caption-attachment-14480872" class="wp-caption-text">（网络图片）</figcaption></figure>
-<figure id="attachment_14480871" aria-describedby="caption-attachment-14480871" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480871-e87c45bcly1i0dv96olicj21400u0kaz.jpg"><img decoding="async" class="size-large wp-image-14480871" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480871-e87c45bcly1i0dv96olicj21400u0kaz-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14480871" class="wp-caption-text">（网络图片）</figcaption></figure>
-<figure id="attachment_14480870" aria-describedby="caption-attachment-14480870" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480870-0078ISZrgy1i0dxpo1wccj30qo0zktnu.jpg"><img decoding="async" class="size-large wp-image-14480870" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480870-0078ISZrgy1i0dxpo1wccj30qo0zktnu-600x800.jpg" alt="" width="600" b="800" /></a><figcaption id="caption-attachment-14480870" class="wp-caption-text">（网络图片）</figcaption></figure>
-<figure id="attachment_14480879" aria-describedby="caption-attachment-14480879" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480879-FireShot-Capture-2178-.jpg"><img decoding="async" class="size-large wp-image-14480879" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480879-FireShot-Capture-2178--600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14480879" class="wp-caption-text">（视频截图）</figcaption></figure>
-<figure id="attachment_14480878" aria-describedby="caption-attachment-14480878" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480878-FireShot-Capture-2171.jpg"><img decoding="async" class="size-large wp-image-14480878" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480878-FireShot-Capture-2171-600x449.jpg" alt="" width="600" b="449" /></a><figcaption id="caption-attachment-14480878" class="wp-caption-text">（视频截图）</figcaption></figure>
-<figure id="attachment_14480877" aria-describedby="caption-attachment-14480877" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480877-FireShot-Capture-2168.jpg"><img decoding="async" class="size-large wp-image-14480877" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480877-FireShot-Capture-2168-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14480877" class="wp-caption-text">（视频截图）</figcaption></figure>
-<figure id="attachment_14480880" aria-describedby="caption-attachment-14480880" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480880-c4b404510db9654f97480a23ffc75974.jpg"><img decoding="async" class="size-large wp-image-14480880" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480880-c4b404510db9654f97480a23ffc75974-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-14480880" class="wp-caption-text">（视频截图）</figcaption></figure>
-<figure id="attachment_14480883" aria-describedby="caption-attachment-14480883" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480883-FireShot-Capture-2165.jpg"><img decoding="async" class="size-large wp-image-14480883" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480883-FireShot-Capture-2165-600x451.jpg" alt="" width="600" b="451" /></a><figcaption id="caption-attachment-14480883" class="wp-caption-text">（视频截图）</figcaption></figure>
+<figure id="attachment_14480875" aria-describedby="caption-attachment-14480875" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480875-e87c45bcly1i0dv964p4gj21400u0aio.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480875" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480875-e87c45bcly1i0dv964p4gj21400u0aio-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14480875" class="wp-caption-text">（网络图片）</figcaption></figure>
+<figure id="attachment_14480874" aria-describedby="caption-attachment-14480874" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480874-e87c45bcly1i0dv98yup1j21400u0gxw.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480874" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480874-e87c45bcly1i0dv98yup1j21400u0gxw-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14480874" class="wp-caption-text">（网络图片）</figcaption></figure>
+<figure id="attachment_14480873" aria-describedby="caption-attachment-14480873" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480873-e87c45bcly1i0dv98l8gmj20u01404by.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480873" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480873-e87c45bcly1i0dv98l8gmj20u01404by-600x800.jpg" alt="" width="600" b="800"></a><figcaption id="caption-attachment-14480873" class="wp-caption-text">（网络图片）</figcaption></figure>
+<figure id="attachment_14480872" aria-describedby="caption-attachment-14480872" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480872-e87c45bcly1i0dv97ebu2j20u01407ha.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480872" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480872-e87c45bcly1i0dv97ebu2j20u01407ha-600x800.jpg" alt="" width="600" b="800"></a><figcaption id="caption-attachment-14480872" class="wp-caption-text">（网络图片）</figcaption></figure>
+<figure id="attachment_14480871" aria-describedby="caption-attachment-14480871" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480871-e87c45bcly1i0dv96olicj21400u0kaz.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480871" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480871-e87c45bcly1i0dv96olicj21400u0kaz-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14480871" class="wp-caption-text">（网络图片）</figcaption></figure>
+<figure id="attachment_14480870" aria-describedby="caption-attachment-14480870" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480870-0078ISZrgy1i0dxpo1wccj30qo0zktnu.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480870" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480870-0078ISZrgy1i0dxpo1wccj30qo0zktnu-600x800.jpg" alt="" width="600" b="800"></a><figcaption id="caption-attachment-14480870" class="wp-caption-text">（网络图片）</figcaption></figure>
+<figure id="attachment_14480879" aria-describedby="caption-attachment-14480879" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480879-FireShot-Capture-2178-.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480879" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480879-FireShot-Capture-2178--600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14480879" class="wp-caption-text">（视频截图）</figcaption></figure>
+<figure id="attachment_14480878" aria-describedby="caption-attachment-14480878" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480878-FireShot-Capture-2171.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480878" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480878-FireShot-Capture-2171-600x449.jpg" alt="" width="600" b="449"></a><figcaption id="caption-attachment-14480878" class="wp-caption-text">（视频截图）</figcaption></figure>
+<figure id="attachment_14480877" aria-describedby="caption-attachment-14480877" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480877-FireShot-Capture-2168.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480877" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480877-FireShot-Capture-2168-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14480877" class="wp-caption-text">（视频截图）</figcaption></figure>
+<figure id="attachment_14480880" aria-describedby="caption-attachment-14480880" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480880-c4b404510db9654f97480a23ffc75974.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480880" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480880-c4b404510db9654f97480a23ffc75974-600x450.jpg" alt="" width="600" b="450"></a><figcaption id="caption-attachment-14480880" class="wp-caption-text">（视频截图）</figcaption></figure>
+<figure id="attachment_14480883" aria-describedby="caption-attachment-14480883" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/04/id14480883-FireShot-Capture-2165.jpg" rel="nofollow"><img decoding="async" class="size-large wp-image-14480883" src="https://i.epochtimes.com/assets/uploads/2025/04/id14480883-FireShot-Capture-2165-600x451.jpg" alt="" width="600" b="451"></a><figcaption id="caption-attachment-14480883" class="wp-caption-text">（视频截图）</figcaption></figure>
 <p>据当地网友表示，“我们这里昨天晚上刮了一夜的大风。”“这个是真的没开玩笑，大早上被风打玻璃声吵醒了。”“没法睡了！郑州的风太吓人了。”</p>
 <p>河南省气象局预计，12日强风将持续，13日仍有8到10级阵风。</p>
 <p>据官媒新华社报导，截至4月12日6时21分，河南全省生效中的大风、寒潮、雷暴大风等预警信号达105条。郑州方特旅游度假区、郑州园博园等多个景区发布临时闭园公告，河南宝泉旅游度假区、洛阳老君山景区等启动限流措施。</p>
 <p>责任编辑：高慧</p>
 <p>此前报导：</p>
-<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/4/10/n14479357.md#1">北京将出现罕见极端大风 局地风力达13级以上</a></p>
-<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/4/11/n14480280.md#1">大风将至 北京超市被抢购一空 盒马配送爆单</a></p>
-<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/4/12/n14480674.md#1">北京罕见齐发五预警 多地强风如灾难电影</a></p>
-<p>&nbsp;</p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/4/10/n14479357.md#1" rel="nofollow noopener noreferrer">北京将出现罕见极端大风 局地风力达13级以上</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/4/11/n14480280.md#1" rel="nofollow noopener noreferrer">大风将至 北京超市被抢购一空 盒马配送爆单</a></p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/25/4/12/n14480674.md#1" rel="nofollow noopener noreferrer">北京罕见齐发五预警 多地强风如灾难电影</a></p>
+<p>?</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/10/n14479357.md#1">北京将出现罕见极端大风 局地风力达13级以上</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/11/n14480280.md#1">大风将至 北京超市被抢购一空 盒马配送爆单</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540305.md#1">贵州榕江被淹 前法官揭中国洪灾背后工程腐败</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14539816.md#1">青海果洛州玛沁县发生4.5级地震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/13/n9951832.md#1" target="_blank">老绥远韩氏：文革酷刑实录</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/26/n10667251.md#1" target="_blank">这些患绝症的精英们何以逢生（3）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/23/n11473593.md#1" target="_blank">林辉：六七香港红潮 新华社分社发动菠萝战</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/8/n11242901.md#1" target="_blank">组图：各国政要祝贺5.13世界法轮大法日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519658.md#1">大唐翰墨端严遒美 笔走龙蛇奔放飘逸（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520991.md#1">【古道人生】善恶有报 报答来自另外空间 报答来自二十年后</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540193.md#1">【新闻大家谈】中共军舰现第二岛链 美日紧密关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538780.md#1">【百年真相】豪车别墅 华西“第一村”破灭真相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540235.md#1">【纪元焦点】北京传“秋天有变” 习气数尽了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537991.md#1">一线白酒遇冷 千元系列茅台“卖一瓶亏一瓶”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538134.md#1">极速充电电池问世 电动车充满电仅18秒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538094.md#1">消息指习首度缺席金砖峰会 引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539257.md#1">《捍卫战士3》可能是最终章 独行侠面临生存危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538624.md#1">《名侦探柯南 独眼的残像》影评：毛利小五郎大出风头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539072.md#1">《F1电影》制作成本高 全球首映票房预测出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539554.md#1">陆剧《长安的荔枝》突撤档 那尔那茜遭封杀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538823.md#1">成本过亿 小沈阳新片上映3天票房仅7.6万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538690.md#1">7种过期调味品千万别吃！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538188.md#1">夏天在花园里用这一物 可赶走恼人的蚊子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535849.md#1">改善前列腺肥大与尿频 教你食疗按摩及运动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536578.md#1">心血管最爱运动——循环系统伸展操</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539087.md#1">专家：避免用三种痛苦的方式伤害伴侣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/4/12/n14480858.htm">组图：河南现15级大风 建筑被毁车辆被砸</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/4/12/n14480858.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
